--- a/public/html/csharp.html
+++ b/public/html/csharp.html
@@ -14,20 +14,25 @@
     <body>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <div class="container-fluid">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/bootstrap.html">Bootstrap</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/javascript.html">Javascript</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" href="../html/csharp.html">C#</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../html/sql.html">SQL</a>
-                </li>
-                </ul>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/bootstrap.html">Bootstrap</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/javascript.html">Javascript</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="../html/csharp.html">C#</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/sql.html">SQL</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
         <div id="main">
