--- a/public/html/bootstrap.html
+++ b/public/html/bootstrap.html
@@ -85,10 +85,11 @@ A Bootstrap 5 rácsrendszere hat osztályt tartalmaz:
                     </div>
                 </div>
 
+
+
                 <button data-bs-toggle="collapse" data-bs-target="#navbar" class="collapseBtn">
                     Navbar
                 </button>
-
 
                 <div class="collapse mt-2 mb-5 pe-5" id="navbar">
                         <pre class="szovegek">
@@ -127,12 +128,10 @@ Hogyan és mit módosíthatsz a navbarban:
 &lt;/nav&gt;</code></pre>
                     </div>
                 </div>
-            </div>
-        </div>
 
 
                 <button data-bs-toggle="collapse" data-bs-target="#table" class="collapseBtn">
-                    Navbar
+                    Table
                 </button>
 
 
@@ -175,6 +174,7 @@ Hogyan és mit módosíthatsz a navbarban:
                 </div>
             </div>
         </div>
+
         
         <script>
             function copyCode(elementId) {
