--- a/public/html/bootstrap.html
+++ b/public/html/bootstrap.html
@@ -39,21 +39,21 @@
         <div id="main">
             <div class="col-4 scrollable">
                 <div class="vertical-scroll-nav mx-auto">
-                    <a href="#responsivity">Reszponzivítás</a>
-                    <a href="#navbar">Navbar</a>
-                    <a href="#table">Table</a>
-                    <a href="#colors">Colors</a>
-                    <a href="#mapa">Margin, padding</a>
-                    <a href="#modal">Modal</a>
-                    <a href="#cards">Cards</a>
-                    <a href="#collapse">Collapse</a>
-                    <a href="#carousel">Carousel</a>
-                    <a href="#alerts">Alerts</a>
+                    <a href="#toResponsivity">Reszponzivítás</a>
+                    <a href="#toNavbar">Navbar</a>
+                    <a href="#toTable">Table</a>
+                    <a href="#toColors">Colors</a>
+                    <a href="#toMapa">Margin, padding</a>
+                    <a href="#toModal">Modal</a>
+                    <a href="#toCards">Cards</a>
+                    <a href="#toCollapse">Collapse</a>
+                    <a href="#toCarousel">Carousel</a>
+                    <a href="#toAlerts">Alerts</a>
                 </div>
             </div>
 
             <div class="col-8 content">
-                <button data-bs-toggle="collapse" data-bs-target="#responsivity" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#responsivity" class="collapseBtn" id="toResponsivity">
                     Reszponzivítás
                 </button>
 
@@ -94,7 +94,7 @@ col-xxl- (dupla extra nagy eszközök - képernyőszélesség 1400px vagy nagyob
 
 
 
-                <button data-bs-toggle="collapse" data-bs-target="#navbar" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#navbar" class="collapseBtn" id="toNavbar">
                     Navbar
                 </button>
 
@@ -138,7 +138,7 @@ Hogyan és mit módosíthatsz a navbarban:
                 </div>
 
 
-                <button data-bs-toggle="collapse" data-bs-target="#table" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#table" class="collapseBtn" id="toTable">
                     Table
                 </button>
 
@@ -188,7 +188,7 @@ Hogyan és mit módosíthatsz a táblában:
                 </div>
 
         
-                <button data-bs-toggle="collapse" data-bs-target="#colors" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#colors" class="collapseBtn" id="toColors">
                     Colors
                 </button>
 
@@ -223,7 +223,7 @@ Background Colors:
                 </div>
 
                 
-                <button data-bs-toggle="collapse" data-bs-target="#mapa" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#mapa" class="collapseBtn" id="toMapa">
                     Margin, padding
                 </button>
 
@@ -262,7 +262,7 @@ Méret:
                     </div>
                 </div>
 
-                <button data-bs-toggle="collapse" data-bs-target="#modal" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#modal" class="collapseBtn" id="toModal">
                     Modal
                 </button>
 
@@ -312,7 +312,7 @@ Mit addhatunk még hozzá:
                     </div>
                 </div>
 
-                <button data-bs-toggle="collapse" data-bs-target="#cards" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#cards" class="collapseBtn" id="toCards">
                     Cards
                 </button>
 
@@ -346,7 +346,7 @@ Mit addhatunk még hozzá:
                     </div>
                 </div>
 
-                <button data-bs-toggle="collapse" data-bs-target="#collapse" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#collapse" class="collapseBtn" id="toCollapse">
                     Collapse
                 </button>
 
@@ -407,7 +407,7 @@ Mit addhatunk még hozzá:
                     </div>
                 </div>
 
-                <button data-bs-toggle="collapse" data-bs-target="#carousel" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#carousel" class="collapseBtn" id="toCarousel" id="toCarousel">
                     Carousel
                 </button>
 
@@ -463,7 +463,7 @@ Mit addhatunk még hozzá:
                     </div>
                 </div>
 
-                <button data-bs-toggle="collapse" data-bs-target="#alerts" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#alerts" class="collapseBtn" id="toAlerts">
                     Alerts
                 </button>
 
