--- a/public/html/csharp.html
+++ b/public/html/csharp.html
@@ -38,13 +38,13 @@
         <div id="main">
             <div class="col-4">
                 <div class="vertical-scroll-nav mx-auto">
-                    <a href="#responsivity">Reszponzivítás</a>
-                    <a href="#navbar">Navbar</a>
+                    <a href="#toResponsivity">Reszponzivítás</a>
+                    <a href="#toNavbar">Navbar</a>
                 </div>
             </div>
 
             <div class="col-8 content">
-                <button data-bs-toggle="collapse" data-bs-target="#responsivity" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#responsivity" class="collapseBtn" id="toResponsivity">
                     Reszponzivítás
                 </button>
 
@@ -83,7 +83,7 @@ A Bootstrap 5 rácsrendszere hat osztályt tartalmaz:
                     </div>
                 </div>
 
-                <button data-bs-toggle="collapse" data-bs-target="#navbar" class="collapseBtn">
+                <button data-bs-toggle="collapse" data-bs-target="#navbar" class="collapseBtn" id="toNavbar">
                     Navbar
                 </button>
 
