--- a/public/html/bootstrap.html
+++ b/public/html/bootstrap.html
@@ -32,6 +32,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="../html/sql.html">SQL</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/boot-suha.html">Alpári oldal</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -116,7 +119,7 @@ Hogyan és mit módosíthatsz a navbarban:
                             Másolás
                         </button>
                         <pre class="bg-light p-3 rounded" id="navbarContent"><code class="language-html">&lt;nav class=&quot;navbar navbar-expand-sm bg-light navbar-light&quot;&gt;
-    &lt;div class=&quot;container-fluid&quot;&gt;
+&lt;div class=&quot;container-fluid&quot;&gt;
         &lt;a class=&quot;navbar-brand&quot; href=&quot;#&quot;&gt;Logo&lt;/a&gt;
         &lt;ul class=&quot;navbar-nav&quot;&gt;
             &lt;li class=&quot;nav-item&quot;&gt;
