--- a/public/html/sql.html
+++ b/public/html/sql.html
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="../html/sql.html">SQL</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/boot-suha.html">Alpári oldal</a>
+                        </li>
                     </ul>
                 </div>
             </div>
