--- a/public/html/javascript.html
+++ b/public/html/javascript.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" href="../html/sql.html">SQL</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/boot-suha.html">Alpári oldal</a>
+                            <a class="nav-link" href="../html/boot-alpari.html">Alpári oldal</a>
                         </li>
                     </ul>
                 </div>
