--- a/public/html/bootstrap.html
+++ b/public/html/bootstrap.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Legális puska - bootstrap</title>
+        <title>Bootstrap</title>
         <!--Bootstrap-->
         <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css" />
         <link rel="stylesheet" href="../css/all.css">
@@ -21,19 +21,19 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="../html/bootstrap.html">Bootstrap</a>
+                            <a class="nav-link" href="../html/bootstrap.html">Bootstrap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/javascript.html">Javascript</a>
+                            <a class="nav-link active" href="../html/javascript.html">Javascript</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../html/csharp.html">C#</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/sql.html">SQL</a>
+                            <a class="nav-link" href="../html/sql-seged.html">SQL</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/boot-alpari.html">Alpári oldal</a>
+                            <a class="nav-link" href="../html/boot-seged.html">Segéd oldal 2</a>
                         </li>
                     </ul>
                 </div>
