--- a/public/html/sql-seged.html
+++ b/public/html/sql-seged.html
@@ -29,10 +29,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item"><b><a class="nav-link" href="../html/bootstrap.html">Főoldal</a></b></li>
-          <li class="nav-item"><a class="nav-link" href="../html/boot-alpari.html">Bootstrap</a></li>
-          <li class="nav-item"><a class="nav-link" href="../html/js-alpari.html">JS</a></li>
-          <li class="nav-item"><a class="nav-link" href="../html/csharp-alpari.html">C#</a></li>
-          <li class="nav-item"><a class="nav-link" href="../html/sql-alpari.html">Adatbázis</a></li>
+          <li class="nav-item"><a class="nav-link" href="../html/boot-seged.html">Bootstrap</a></li>
+          <li class="nav-item"><a class="nav-link" href="../html/js-seged.html">JS</a></li>
+          <li class="nav-item"><a class="nav-link" href="../html/csharp-seged.html">C#</a></li>
+          <li class="nav-item"><a class="nav-link" href="../html/sql-seged.html">Adatbázis</a></li>
         </ul>
       </div>
     </div>
