--- a/public/html/bootstrap.html
+++ b/public/html/bootstrap.html
@@ -21,10 +21,10 @@
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/bootstrap.html">Bootstrap</a>
+                            <a class="nav-link active" href="../html/bootstrap.html">Bootstrap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../html/javascript.html">Javascript</a>
+                            <a class="nav-link" href="../html/javascript.html">Javascript</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../html/csharp.html">C#</a>
