--- a/public/html/csharp.html
+++ b/public/html/csharp.html
@@ -23,10 +23,10 @@
                             <a class="nav-link" href="../html/bootstrap.html">Bootstrap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="../html/javascript.html">Javascript</a>
+                            <a class="nav-link" href="../html/javascript.html">Javascript</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/csharp.html">C#</a>
+                            <a class="nav-link active" href="../html/csharp.html">C#</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../html/sql-seged.html">SQL</a>
