--- a/public/html/csharp.html
+++ b/public/html/csharp.html
@@ -56,11 +56,8 @@
                     <a href="#toGrid">WPF Grid</a>
                     <a href="#toWpfList">WPF listaBox vagy Táblázat feltöltése az osztály elemeivel</a>
                     <a href="#toCbox">CheckBox és RadioButton használata</a>
-<<<<<<< HEAD
                     <a href="#toDialogs">OpenFileDialog() és ShowDialog() használata</a>
-=======
                     <a href="#toBarna">Absztrakt - (Kovács Barnának)</a>
->>>>>>> 40300c2d1789c59874e897375a94f2c882a36aa4
                 </div>
             </div>
 
@@ -881,6 +878,8 @@ private void mentes(object sender, RoutedEventArgs e)
                     </div>
                 </div>
 
+
+
                 <button data-bs-toggle="collapse" data-bs-target="#dialogs" class="collapseBtn" id="toDialogs">
                     OpenFileDialog() és ShowDialog() használata
                 </button>
@@ -888,7 +887,7 @@ private void mentes(object sender, RoutedEventArgs e)
 
                 <div class="collapse mt-2 mb-5 pe-5" id="dialogs">
 <pre class="szovegek">
-<b>OpenFileDialog()</b>
+<b>OpenFileDialog</b>
 - A segítségével a felhasználó egy felugró ablakban (megnyitás ablak) böngészhet a számítógépen található fájlok között és kiválaszthat egyet, amit a program használhat. (pl.: megnyithat vagy feldolgozhat)
 
 - Például egy gombra kattintáskor kiválasztunk egy txt fájlt.
