--- a/public/html/csharp.html
+++ b/public/html/csharp.html
@@ -887,7 +887,7 @@ private void mentes(object sender, RoutedEventArgs e)
 
                 <div class="collapse mt-2 mb-5 pe-5" id="dialogs">
 <pre class="szovegek">
-<b>OpenFileDialog</b>
+<b>OpenFileDialog()</b>
 - A segítségével a felhasználó egy felugró ablakban (megnyitás ablak) böngészhet a számítógépen található fájlok között és kiválaszthat egyet, amit a program használhat. (pl.: megnyithat vagy feldolgozhat)
 
 - Például egy gombra kattintáskor kiválasztunk egy txt fájlt.
